# Oasis-RangeFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  in_mem_bench.cc  in_mem_bench.sh
benchmark/test_wrapper/: oasis_plus_test_wrapper.hpp  oasis_test_wrapper.hpp  test_wrapper.hpp  util.hpp
benchmark/workloads/: CMakeLists.txt  setup.sh  workload_gen.cc
oasis/: bitmap.h  bitset.h  models.h  oasis.h
oasis/common/: type.h  util.h
src/: CMakeLists.txt  filter_builder.cc  oasis_plus.cc
src/include/: filter_builder.h  oasis_plus.h  util.h
src/include/learned_rf/: bitset.h  learned_rf.h
src/include/proteus/: MurmurHash3.h  bitvector.h  clhash.h  config.h  label_vector.h  louds_dense.h  louds_sparse.h  modeling.h  popcount.h  prefixbf.h  proteus.h  rank.h  select.h  suffix.h  surf_builder.h
src/learned_rf/: CMakeLists.txt  bitset.cc  learned_rf.cc
src/proteus/: CMakeLists.txt  MurmurHash3.cc  bitvector.cc  clhash.cc  config.cc  label_vector.cc  louds_dense.cc  louds_sparse.cc  modeling.cc  prefixbf.cc  proteus.cc  rank.cc  select.cc  suffix.cc  surf_builder.cc
